# ezside

./: .bumpversion.cfg  .gitignore  README.md  lmao.html  lmao.sh  main.py  main_tester_class01.py  main_tester_class02.py  pyproject.toml  setup.cfg  tester_class_01.py  tester_class_02.py  tester_class_03.py  tester_class_04.py  tester_class_05.py
src/_deprecate/: __init__.py  _thread_box.py  _window_box.py
src/deprecated/: _OLD_box_widget.py  _OLD_load_resource.py  _abstract_box_style.py  _control_data.py  _font.py  _icon_parser.py  _json_box_style.py  _load_resource.py
src/ezside/: __init__.py  _test.py  _test_canvas.py
src/lmaobars/: __init__.py  _main_menu_bar.py  _main_status_bar.py
src/moreattribox/: __init__.py  _flag.py  _wait.py
src/morevistutils/: __init__.py  _bag.py  _element.py  _field.py  _find_between.py  (+7 more)
zzzold/: _OLD_app_settings.py  _abstract_dialog_window.py  _abstract_menu.py  _abstract_talker.py  _abstract_user_input.py  _action_descriptor.py  _app.py  _app_settings.py  _app_thread.py  _base_widget.py  _base_window.py  _colon_display.py  _color_box.py  _color_selection.py  _confirm_box.py  _core_dialog.py  _debug_menu.py  _debug_window.py  _dialog_buttons.py  _digital_clock.py  _double_slider.py  _edit_menu.py  _equalizer.py  _file_menu.py  _folder_selection.py  _font_selection.py  _graffiti_vandal.py  _help_menu.py  _horizontal_slider.py  _img_view.py  _int_dialog_window.py  _label.py  _layout_descriptor.py  _layout_window.py  _main_desc.py  _main_menu_bar.py  _main_status_bar.py  _main_window.py  _margins_descriptor.py  _open_file.py  (+12 more)
(+369 files in other folders)
